k8s/temp-network-policy.yaml
      app: backend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: exam-platform
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: exam-platform
      - namespaceSelector:
            matchLabels:
              name: argocd
      ports:
        - protocol: TCP
          port: 4000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: exam-platform
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              name: exam-platform
      ports:
        - protocol: TCP
          port: 6379
    - to: []
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 53
